# erised

./: .pre-commit-config.yaml  README.md  pyproject.toml
erised/: connector.py  datatypes.py  future.py  main.py  proxy.py  remote.py  task.py
examples/: main.py
tests/: test_future.py  test_proxy.py
