[tool.poetry]
name = "erised"
version = "0.1.0"
description = ""
authors = ["Marco Aguiar <marcoaaguiar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^7.21.0"

[tool.poetry.dev-dependencies]
rope = "^0.18.0"
black = "^20.8b1"
mypy = "^0.812"
pytest = "^6.2.2"
pytest-mock = "^3.5.1"
pytest-cov = "^2.11.1"
pyflakes = "^2.3.0"
ipdb = "^0.13.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
